Fix in-line blog images on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -258,7 +258,7 @@ code {
 		 
 			.blogImageInline {
 				display: block;
-				width: 100%;
+				max-width: 100%;
 				height: 100%;
 				margin: 10px;
 			}
